(fix) table overflow hidden to overflow in css

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -45,7 +45,7 @@ table {
   margin-top: 30px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   border-radius: 12px;
-  overflow: hidden;
+  overflow: scroll;
 }
 
 th, td {
